feat(integrations): add support for zoominfo (#2469)
## Describe your changes

- Add support for zoominfo

## Issue ticket number and link

[EXT-98](https://linear.app/nango/issue/EXT-98/add-support-for-zoominfo-api)

- Authentication in ZoomInfo is a little bit different, For us to
receive a valid JWT we will need to send the following request

```
curl --location 'https://api.zoominfo.com/authenticate' \
--header 'Content-Type: application/json' \
--data '{
    "username": "username",
    "password": "password"
}'
```
This will return :
```
{
"success": true,
"jwt": "token"
}
```

- The token is valid for 60 mins but from the provider's
[docs](https://api-docs.zoominfo.com/#477888fc-8308-4645-81ca-ca7a6d7ba3d1)
it is recommended to refresh it every 55 minutes.

- Once generated, we can use it as follows: `Authorization: Bearer
YOUR_ACCESS_TOKEN`

- This authentication is almost similar to `OAUTH2_CC` so imo there is
no need to reinvent the wheel

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -3135,3 +3135,16 @@ zoom:
     proxy:
         base_url: https://api.zoom.us/v2
     docs: https://docs.nango.dev/integrations/all/zoom
+zoominfo:
+    categories:
+        - crm
+        - marketing
+    auth_mode: OAUTH2_CC
+    proxy:
+        retry:
+            after: 'X-RateLimit-Reset'
+        base_url: https://api.zoominfo.com
+    token_url: https://api.zoominfo.com/authenticate
+    token_request_auth_method: custom
+    body_format: json
+    docs: https://docs.nango.dev/integrations/all/zoominfo
