--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1553,7 +1553,11 @@ listmonk:
         base_url: https://${connectionConfig.domain}/api
         headers:
             content-type: application/json
-    docs: https://docs.nango.dev/integrations/all/listmonk
+        retry:
+            after: 'Retry-After'
+        verification:
+            method: GET
+            endpoint: /lists
 mailgun:
     categories:
         - marketing
