--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -40,8 +40,10 @@
         "@nangohq/types": "file:../types",
         "@radix-ui/react-dialog": "1.0.5",
         "@radix-ui/react-dropdown-menu": "2.0.6",
+        "@radix-ui/react-hover-card": "1.1.1",
         "@radix-ui/react-icons": "1.3.0",
         "@radix-ui/react-popover": "1.0.7",
+        "@radix-ui/react-progress": "1.1.0",
         "@radix-ui/react-scroll-area": "1.0.5",
         "@radix-ui/react-tooltip": "1.0.7",
         "@sentry/react": "8.7.0",
