feat(integrations): add support for Coros (#2449)
## Describe your changes
Adding support for the Coros API Provider.

Coros provides a test environment, so I followed the pattern for sandbox
integrations, and created a `coros-sandbox` provider as well.

<img width="959" alt="Screenshot 2024-07-02 at 8 49 08 PM"
src="https://github.com/NangoHQ/nango/assets/27711273/2d5d1264-9264-44a5-bed4-f5215ab7ee45">
<img width="662" alt="Screenshot 2024-07-02 at 8 49 17 PM"
src="https://github.com/NangoHQ/nango/assets/27711273/8fa2d66d-8825-4d31-ae01-96573118498d">

---------

Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -540,6 +540,38 @@ contentstack:
     authorization_url: https://${connectionConfig.subdomain}.contentstack.com/apps/${connectionConfig.appId}/authorize
     token_url: https://${connectionConfig.subdomain}.contentstack.com/apps-api/apps/token
     docs: https://docs.nango.dev/integrations/all/contentstack
+coros:
+    categories:
+        - sports
+    auth_mode: OAUTH2
+    authorization_url: https://open.coros.com/oauth2/authorize
+    token_url: https://open.coros.com/oauth2/accesstoken
+    refresh_url: https://open.coros.com/oauth2/refresh-token
+    authorization_params:
+        response_type: code
+    token_response_metadata:
+        - openId
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://open.coros.com
+coros-sandbox:
+    auth_mode: OAUTH2
+    authorization_url: https://opentest.coros.com/oauth2/authorize
+    token_url: https://opentest.coros.com/oauth2/accesstoken
+    refresh_url: https://opentest.coros.com/oauth2/refresh-token
+    authorization_params:
+        response_type: code
+    token_response_metadata:
+        - openId
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://opentest.coros.com
 #Untested configuration. Please reach out if you have a test account that we can use to test it.
 datev:
     categories:
