feat(integrations): add support for listmonk (#2480)
## Describe your changes
I integrated basic proxy support for listmonk. 

## Issue ticket number and link

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

---------

Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1577,6 +1577,19 @@ luma:
             method: GET
             endpoint: /public/v1/user/get-self
     docs: https://docs.nango.dev/integrations/all/luma
+listmonk:
+    categories:
+        - marketing
+    auth_mode: BASIC
+    proxy:
+        base_url: https://${connectionConfig.domain}/api
+        headers:
+            content-type: application/json
+        retry:
+            after: 'Retry-After'
+        verification:
+            method: GET
+            endpoint: /lists
 mailgun:
     categories:
         - marketing
