--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -2291,6 +2291,55 @@ integrations:
                 updatedAt: date
                 teamId: string
                 projectIds: string
+    luma:
+        syncs:
+            list-events:
+                description: >
+                    This sync will be used to sync all of the events managed by your
+                    Calendar. See https://docs.lu.ma/reference/calendar-list-events for
+                    more information.
+                endpoint: GET /luma/list-events
+                sync_type: incremental
+                runs: every day
+                output: Event
+        models:
+            Timestamps:
+                created_at: string
+                start_at: string
+                end_at: string
+            Event:
+                created_at: string
+                start_at: string
+                end_at: string
+                id: string
+                cover_url: string
+                name: string
+                description: string
+                description_md: string
+                series_api_id: string | null
+                duration_interval: string
+                geo_latitude: string | null
+                geo_longitude: string | null
+                geo_address_json: GeoAddress | null
+                url: string
+                timezone: string
+                event_type: string
+                user_api_id: string
+                visibility: string
+                meeting_url: string | null
+                zoom_meeting_url: string | null
+            GeoAddress:
+                city: string
+                type: string
+                region: string
+                address: string
+                country: string
+                latitude: string
+                place_id: string
+                longitude: string
+                city_state: string
+                description: string
+                full_address: string
     microsoft-teams:
         syncs:
             org-units:
@@ -2670,24 +2719,24 @@ integrations:
                 description: >
                     This action will be used to display a list of sites to the end-user,
                     who will pick the ones he wants to sync.
-                endpoint: GET /sharepoint/list-sites
+                endpoint: POST /sharepoint/list-sites
                 scopes:
                     - Sites.ReadWrite.All
                     - offline_access
-                output: SharePointSiteId
+                output: SharePointSite[]
         syncs:
             file-sync:
                 description: >
                     This sync will be used to sync file metadata from SharePoint site
                     based on the ones the user has picked.
-                endpoint: /sharepoint/file-sync
+                endpoint: GET /sharepoint/file-sync
                 sync_type: incremental
-                track_deletes: true
                 runs: every 1 hour
                 scopes:
                     - Sites.ReadWrite.All
                     - offline_access
-                auto_start: true
+                input: SharePointSite
+                auto_start: false
                 output: FileMetadata
         models:
             FileMetadata:
@@ -2701,8 +2750,12 @@ integrations:
                 download_url: string
                 created_at: Date
                 blob_size: number
-            SharePointSiteId:
+            SharePointSite:
                 id: string
+                name: string
+                webUrl: string
+            SharePointMetadata:
+                sitesToSync: SharePointSite[]
     slack:
         syncs:
             users:
