--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3429,6 +3429,7 @@ integrations:
                 output: Contact
                 sync_type: incremental
                 endpoint: GET /xero/contacts
+                version: 0.0.2
             accounts:
                 description: >
                     Fetches all accounts in Xero (chart of accounts). Incremental sync,
