--- a/integration-templates/luma/nango.yaml
+++ b/integration-templates/luma/nango.yaml
@@ -3,7 +3,7 @@ integrations:
         syncs:
             list-events:
                 description: |
-                    This sync will be used to sync all of the events managed by your Calendar. See https://docs.lu.ma/reference/calendar-list-events for more information.
+                    This sync will be used to sync all of the events managed by your Calendar. See https://docs.lu.ma/reference/calendar-list-events for more details.
                 endpoint: GET /luma/list-events
                 sync_type: incremental
                 runs: every day
