--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -2670,39 +2670,46 @@ integrations:
                 description: >
                     This action will be used to display a list of sites to the end-user,
                     who will pick the ones he wants to sync.
-                endpoint: GET /sharepoint/list-sites
+                endpoint: POST /sharepoint/list-sites
                 scopes:
                     - Sites.ReadWrite.All
                     - offline_access
-                output: SharePointSiteId
+                output: SharePointMetadata
         syncs:
             file-sync:
                 description: >
                     This sync will be used to sync file metadata from SharePoint site
                     based on the ones the user has picked.
-                endpoint: /sharepoint/file-sync
+                endpoint: GET /sharepoint/file-sync
                 sync_type: incremental
-                track_deletes: true
                 runs: every 1 hour
                 scopes:
                     - Sites.ReadWrite.All
                     - offline_access
-                auto_start: true
+                input: SharePointMetadata
+                auto_start: false
                 output: FileMetadata
         models:
             FileMetadata:
-                etag: string
                 id: string
+                name: string
+                etag: string
+                cTag: string
                 is_folder: boolean
-                mime_type: string
+                mime_type: string | null
                 path: string
                 raw_source: object
-                updated_at: Date
-                download_url: string
-                created_at: Date
+                updated_at: string
+                download_url: string | null
+                created_at: string
                 blob_size: number
-            SharePointSiteId:
+            Site:
                 id: string
+                name: string
+                createdDateTime: string
+                webUrl: string
+            SharePointMetadata:
+                sitesToSync: Site[]
     slack:
         syncs:
             users:
