[nan-1366] add .nango dir and fix path

--- a/.github/workflows/integration-template-upload.yaml
+++ b/.github/workflows/integration-template-upload.yaml
@@ -59,6 +59,7 @@ jobs:
                     nango compile
 
                     cp -r dist/ $wd/$dir/
+                    cp -r .nango/ $wd/$dir/
 
                     cd -
                     rm -rf /tmp/nango-temp
