--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -412,8 +412,11 @@ canny:
     auth_mode: API_KEY
     proxy:
         base_url: https://canny.io/api/v1
-        data:
+        query:
             apiKey: ${apiKey}
+        verification:
+            method: POST
+            endpoint: /boards/list
     docs: https://docs.nango.dev/integrations/all/canny
 certn:
     categories:
