--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -2670,7 +2670,7 @@ integrations:
                 description: >
                     This action will be used to display a list of sites to the end-user,
                     who will pick the ones he wants to sync.
-                endpoint: POST /sharepoint/list-sites
+                endpoint: GET /sharepoint/list-sites
                 scopes:
                     - Sites.ReadWrite.All
                     - offline_access
