--- a/.github/workflows/tests-windows.yaml
+++ b/.github/workflows/tests-windows.yaml
@@ -8,7 +8,7 @@ on:
     pull_request:
 
 concurrency:
-    group: tests-${{ github.event.pull_request.number || github.ref }}
+    group: tests-windows/${{ github.event.pull_request.number || github.ref }}
     cancel-in-progress: true
 
 jobs:
