--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -2675,6 +2675,7 @@ integrations:
                     - Sites.ReadWrite.All
                     - offline_access
                 output: SharePointMetadata
+                version: 1.0.0
         syncs:
             file-sync:
                 description: >
@@ -2689,6 +2690,7 @@ integrations:
                 input: SharePointMetadata
                 auto_start: false
                 output: FileMetadata
+                version: 1.0.0
         models:
             FileMetadata:
                 id: string
