--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -406,6 +406,18 @@ calendly:
     token_response_metadata:
         - owner
     docs: https://docs.nango.dev/integrations/all/calendly
+canny:
+    categories:
+        - support
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://canny.io/api/v1
+        query:
+            apiKey: ${apiKey}
+        verification:
+            method: POST
+            endpoint: /boards/list
+    docs: https://docs.nango.dev/integrations/all/canny
 certn:
     categories:
         - legal
