--- a/.github/workflows/integration-flows.yaml
+++ b/.github/workflows/integration-flows.yaml
@@ -48,3 +48,16 @@ jobs:
                         cd ../../
                     fi
                   done
+
+            - name: Make sure flows.yaml is compiled
+              run: |
+                  node ./scripts/flows.js
+
+                  REPO_DIRTY=$(git status --short)
+                  if [[ ! -z "$REPO_DIRTY" ]]; then
+                    git diff
+                    echo ""
+                    echo -e "\r⛔️ flows.yaml hasn't been compiled, please run:"
+                    echo -e "node ./scripts/flows.js"
+                    exit 1
+                  fi
