fix(cli): handle Windows paths (#2312) (#2496)
This commit uses forward slashes on Windows for the calls to glob.sync
and tsup.build - those are where `nango compile` and `nango dev` were
failing.

I copied the slash function from https://github.com/sindresorhus/slash,
as it just converts \ to /, and didn't want to deal with
package-lock.json changes.

It also uses path.join or path.resolve instead of `${foo}/pok/bar.ts`,
os.tmpdir() instead of '/tmp', etc.

getNangoRootPath() now always returns a string, since getPackagePath()
will throw an error if it can't find the package.

And I expanded the regex in packages/node-client/lib/utils.unit.test.ts
to handle "nango-node-client/0.41.0
(linux/5.15.153.1-microsoft-standard-WSL2; node.js/20.12.2)".

I ran the tests on Windows with git bash and Command Prompt, and with
WSL2 Ubuntu -

    npm i
    npm run ts-build
    npm run test:cli
    npm run test:unit

and in a test nango project, these worked -

$ node /c/users/bburns/Workspace/forks/nango/packages/cli/dist/index.js
generate --debug
$ node /c/users/bburns/Workspace/forks/nango/packages/cli/dist/index.js
compile --debug
$ node /c/users/bburns/Workspace/forks/nango/packages/cli/dist/index.js
dev --debug

Also added a workflow to run test:cli and test:unit on Windows -
.github/workflows/tests-windows.yaml.

## Issue ticket number and link

#2312

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [x] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

---------

Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,9 +13,10 @@ concurrency:
 
 jobs:
     tests:
-        runs-on: ubuntu-latest
+        runs-on: ${{ matrix.os }}
         strategy:
             matrix:
+                os: [ubuntu-latest]
                 node-version: [18.x, 20.x]
 
         steps:
