--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3549,6 +3549,7 @@ integrations:
                 scopes: accounting.transactions
                 output: InvoiceActionResponse
                 endpoint: POST /xero/invoices
+                version: 0.0.2
             update-invoice:
                 description: |
                     Updates one or more invoices in Xero. To delete an invoice
