--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,8 +29,7 @@
         "@swc/core": "^1.5.25",
         "ajv": "^8.12.0",
         "ajv-errors": "^3.0.0",
-        "axios": "^1.2.0",
-        "byots": "^5.0.0-dev.20221103.1.34",
+        "axios": "^1.3.4",
         "chalk": "^5.3.0",
         "chokidar": "^3.5.3",
         "commander": "^10.0.1",
@@ -42,7 +41,6 @@
         "glob": "^10.3.10",
         "import-meta-resolve": "^4.1.0",
         "js-yaml": "^4.1.0",
-        "memfs": "^3.5.1",
         "npm-package-arg": "^10.1.0",
         "promptly": "^3.2.0",
         "semver": "^7.5.2",
@@ -50,7 +48,6 @@
         "ts-node": "^10.9.1",
         "tsup": "^8.1.0",
         "typescript": "^5.3.3",
-        "vm": "^0.1.0",
         "zod": "^3.22.4"
     },
     "devDependencies": {
@@ -72,10 +69,7 @@
         "esbuild": "^0.17.19",
         "json-schema": "0.4.0",
         "strip-ansi": "7.1.0",
-        "vitest": "1.6.0",
-        "webpack": "^5.85.1",
-        "webpack-cli": "^5.1.3",
-        "webpack-node-externals": "^3.0.0"
+        "vitest": "1.6.0"
     },
     "engines": {
         "node": ">=18.0"
