--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -25,20 +25,18 @@
         "@nangohq/records": "file:../records",
         "@nangohq/utils": "file:../utils",
         "@nangohq/webhooks": "file:../webhooks",
-        "@trpc/client": "^10.44.1",
-        "@trpc/server": "^10.44.1",
-        "@types/fs-extra": "^11.0.1",
+        "@trpc/client": "10.45.2",
+        "@trpc/server": "10.45.2",
         "axios": "^1.3.4",
         "dd-trace": "5.2.0",
         "dotenv": "^16.0.3",
-        "fs-extra": "^11.1.1",
+        "get-port": "7.1.0",
         "node-cron": "3.0.3",
-        "superjson": "^2.2.1",
+        "superjson": "2.2.1",
         "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/node": "^20.12.2",
-        "get-port": "7.1.0",
         "nodemon": "^3.0.1",
         "typescript": "5.3.3",
         "type-fest": "4.14.0",
