--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -53,11 +53,11 @@
         "passport": "^0.6.0",
         "passport-http": "^0.3.0",
         "passport-local": "^1.0.0",
-        "rate-limiter-flexible": "^5.0.0",
+        "rate-limiter-flexible": "5.0.3",
         "redis": "4.6.13",
-        "simple-oauth2": "^5.0.1",
+        "simple-oauth2": "5.1.0",
         "uuid": "^9.0.0",
-        "ws": "^8.17.1",
+        "ws": "8.18.0",
         "zod": "3.22.4"
     },
     "devDependencies": {
