--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -19,7 +19,7 @@
     "license": "SEE LICENSE IN LICENSE FILE IN GIT REPOSITORY",
     "dependencies": {
         "@aws-sdk/client-s3": "3.590.0",
-        "@datadog/datadog-api-client": "^1.16.0",
+        "@datadog/datadog-api-client": "1.26.0",
         "@hapi/boom": "^10.0.1",
         "@nangohq/database": "file:../database",
         "@nangohq/nango-yaml": "^0.42.0",
@@ -31,15 +31,12 @@
         "archiver": "^6.0.1",
         "axios": "^1.3.4",
         "braintree": "^3.15.0",
-        "chalk": "^5.3.0",
         "dayjs": "^1.11.7",
         "dayjs-plugin-utc": "^0.1.2",
         "dd-trace": "5.2.0",
         "exponential-backoff": "^3.1.1",
         "fast-safe-stringify": "2.1.1",
         "form-data": "4.0.0",
-        "fs-extra": "^11.1.1",
-        "ip": "^2.0.1",
         "js-yaml": "^4.1.0",
         "jsonwebtoken": "^9.0.2",
         "lodash-es": "^4.17.21",
@@ -50,7 +47,7 @@
         "qs": "^6.11.2",
         "redis": "4.6.13",
         "semver": "^7.5.4",
-        "simple-oauth2": "^5.0.1",
+        "simple-oauth2": "5.1.0",
         "uuid": "^9.0.0"
     },
     "engines": {
@@ -65,7 +62,6 @@
         "@nangohq/webhooks": "file:../webhooks",
         "@sentry/types": "7.112.2",
         "@types/braintree": "^3.3.12",
-        "@types/fs-extra": "^11.0.1",
         "@types/ip": "^1.1.0",
         "@types/js-yaml": "^4.0.5",
         "@types/json-schema": "7.0.15",
