--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3549,7 +3549,7 @@ integrations:
                 scopes: accounting.transactions
                 output: InvoiceActionResponse
                 endpoint: POST /xero/invoices
-                version: 0.0.2
+                version: 1.0.0
             update-invoice:
                 description: |
                     Updates one or more invoices in Xero. To delete an invoice
@@ -3720,32 +3720,40 @@ integrations:
             BaseInvoice:
                 type: ACCPAY | ACCREC
                 external_contact_id: string
+                url?: string
             CreateInvoice:
                 type: ACCPAY | ACCREC
                 external_contact_id: string
+                url?: string
                 fees: CreateInvoiceFee[]
                 issuing_date?: date
                 payment_due_date?: date | null
                 status?: string
                 number?: string
-                tax_rate?: number
                 currency?: string
                 purchase_order?: string | null
-            CreateInvoiceFee:
-                description: string
-                item_id?: string
+            BaseInvoiceFee:
+                account_code?: string
                 item_code?: string | null
+                account_external_id?: string | null
+                discount_amount_cents?: number | null
+                discount_rate?: number | null
+            CreateInvoiceFee:
+                account_code?: string
+                item_code?: string | null
+                account_external_id?: string | null
+                discount_amount_cents?: number | null
+                discount_rate?: number | null
+                item_id?: string
+                description: string
                 units?: number
                 precise_unit_amount?: number | null
-                account_code?: string
-                account_external_id?: string | null
                 amount_cents?: number | null
                 taxes_amount_cents?: number | null
-                rate?: number | null
-                price?: number | null
             Invoice:
                 type: ACCPAY | ACCREC
                 external_contact_id: string
+                url?: string
                 id: string
                 issuing_date: string | null
                 payment_due_date: string | null
@@ -3755,20 +3763,21 @@ integrations:
                 purchase_order: string | null
                 fees: InvoiceFee[]
             InvoiceFee:
-                item_id: string
+                account_code?: string
                 item_code?: string | null
+                account_external_id?: string | null
+                discount_amount_cents?: number | null
+                discount_rate?: number | null
+                item_id: string
                 description: string | null
                 units: number | null
                 precise_unit_amount: number | null
-                account_code?: string
-                account_external_id?: string | null
                 amount_cents: number | null
                 taxes_amount_cents: number | null
-                rate?: number | null
-                price?: number | null
             FailedInvoice:
                 type: ACCPAY | ACCREC
                 external_contact_id: string
+                url?: string
                 id: string
                 issuing_date: string | null
                 payment_due_date: string | null
