feat(webhooks): [nan-1432] add checkr webhook forwarding possibility (#2516)
## Describe your changes
Support checkr webhooks. TBD on how to verify the webhook signature.
[Docs](https://docs.checkr.com/#section/Webhooks/Securing-webhooks)

## Issue ticket number and link
NAN-1432

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [ ] I added tests, otherwise the reason is: 
- [ ] I added observability, otherwise the reason is:
- [ ] I added analytics, otherwise the reason is:

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -465,7 +465,10 @@ checkr-partner:
         retry:
             at: 'X-Ratelimit-Reset'
         base_url: https://api.checkr.com
-    post_connection_script: checkr-post-connection
+    token_response_metadata:
+        - checkr_account_id
+    webhook_routing_script: checkrWebhookRouting
+    post_connection_script: checkrPostConnection
     docs: https://docs.nango.dev/integrations/all/checkr
 checkr-partner-staging:
     categories:
@@ -480,7 +483,10 @@ checkr-partner-staging:
         retry:
             at: 'X-Ratelimit-Reset'
         base_url: https://api.checkr-staging.com
-    post_connection_script: checkr-post-connection
+    token_response_metadata:
+        - checkr_account_id
+    webhook_routing_script: checkrWebhookRouting
+    post_connection_script: checkrPostConnection
     docs: https://docs.nango.dev/integrations/all/checkr
 chorus:
     auth_mode: BASIC
@@ -1011,7 +1017,7 @@ github-app:
     auth_mode: APP
     authorization_url: ${connectionConfig.appPublicLink}/installations/new
     token_url: https://api.github.com/app/installations/${connectionConfig.installation_id}/access_tokens
-    webhook_routing_script: github-app-webhook-routing
+    webhook_routing_script: githubAppWebhookRouting
     docs: https://docs.nango.dev/integrations/all/github
 github-app-oauth:
     categories:
@@ -1023,8 +1029,8 @@ github-app-oauth:
     token_url:
         OAUTH2: https://github.com/login/oauth/access_token
         APP: https://api.github.com/app/installations/${connectionConfig.installation_id}/access_tokens
-    webhook_routing_script: github-app-oauth-webhook-routing
-    post_connection_script: github-app-oauth-post-connection
+    webhook_routing_script: githubAppOauthWebhookRouting
+    post_connection_script: githubAppOauthPostConnection
     docs: https://docs.nango.dev/integrations/all/github
 gitlab:
     categories:
@@ -1309,8 +1315,8 @@ hubspot:
     token_url: https://api.hubapi.com/oauth/v1/token
     connection_configuration:
         - portalId
-    post_connection_script: hubspot-post-connection
-    webhook_routing_script: hubspot-webhook-routing
+    post_connection_script: hubspotPostConnection
+    webhook_routing_script: hubspotWebhookRouting
     proxy:
         base_url: https://api.hubapi.com
         decompress: true
@@ -1391,8 +1397,8 @@ jira:
             limit_name_in_request: limit
             response_path: results
             link_path_in_response_body: _links.next
-    post_connection_script: jira-post-connection
-    webhook_routing_script: jira-webhook-routing
+    post_connection_script: jiraPostConnection
+    webhook_routing_script: jiraWebhookRouting
     docs: https://docs.nango.dev/integrations/all/jira
 jira-basic:
     categories:
@@ -1575,8 +1581,8 @@ linear:
     proxy:
         base_url: https://api.linear.app
     disable_pkce: true
-    webhook_routing_script: linear-webhook-routing
-    post_connection_script: linear-post-connection
+    webhook_routing_script: linearWebhookRouting
+    post_connection_script: linearPostConnection
     webhook_user_defined_secret: true
     docs: https://docs.nango.dev/integrations/all/linear
 linkedin:
@@ -2279,8 +2285,8 @@ salesforce:
         - instance_url
     proxy:
         base_url: ${connectionConfig.instance_url}
-    webhook_routing_script: salesforce-webhook-routing
-    post_connection_script: salesforce-post-connection
+    webhook_routing_script: salesforceWebhookRouting
+    post_connection_script: salesforcePostConnection
     docs: https://docs.nango.dev/integrations/all/salesforce
 salesforce-sandbox:
     auth_mode: OAUTH2
@@ -2415,7 +2421,7 @@ slack:
             cursor_path_in_response: response_metadata.next_cursor
             cursor_name_in_request: cursor
             limit_name_in_request: limit
-    webhook_routing_script: slack-webhook-routing
+    webhook_routing_script: slackWebhookRouting
     docs: https://docs.nango.dev/integrations/all/slack
 smartrecruiters-api-key:
     auth_mode: API_KEY
@@ -3084,7 +3090,7 @@ xero:
         - offline_access
     proxy:
         base_url: https://api.xero.com
-    post_connection_script: xero-post-connection
+    post_connection_script: xeroPostConnection
     docs: https://docs.nango.dev/integrations/all/xero
 yahoo:
     categories:
