--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2675,7 +2675,7 @@ teamtailor:
         - ats
     auth_mode: API_KEY
     proxy:
-        base_url: https://${connectionConfig.extension}.teamtailor.com/${connectionConfig.version}/
+        base_url: https://${connectionConfig.extension}.teamtailor.com
         retry:
             after: 'X-Rate-Limit-Reset'
         headers:
