--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -72,6 +72,7 @@
         "react-scripts": "5.0.1",
         "react-toastify": "9.1.1",
         "react-use": "17.5.0",
+        "recharts": "2.12.7",
         "swr": "2.2.5",
         "tailwind-merge": "2.3.0",
         "tailwindcss": "3.4.3",
