--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -23,6 +23,7 @@
         "@trpc/client": "^10.45.1",
         "@trpc/server": "^10.45.1",
         "axios": "^1.2.0",
+        "botbuilder": "^4.22.3",
         "connect-timeout": "^1.9.0",
         "dd-trace": "5.2.0",
         "express": "^4.19.2",
