--- a/.github/workflows/validation.yaml
+++ b/.github/workflows/validation.yaml
@@ -17,20 +17,17 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
-
-            - name: Lint yaml files
-              uses: ibiqlik/action-yamllint@v3
-
-            - name: Set up Python
-              uses: actions/setup-python@v4
               with:
-                  python-version: 3.8
+                  fetch-depth: '0'
 
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install pyyaml jsonschema
+            - uses: actions/setup-node@v4
+              with:
+                  cache: 'npm'
+                  node-version-file: '.nvmrc'
+                  registry-url: 'https://registry.npmjs.org'
 
             - name: Validate YAML
               run: |
-                  python ./scripts/validation/providers/validate.py ./packages/shared/providers.yaml
+                  cd scripts/validation/providers
+                  npm i
+                  node validate.js
