--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -413,7 +413,7 @@ canny:
     proxy:
         base_url: https://canny.io/api/v1
         query:
-            apiKey: ${apiKey}
+            api_key: ${apiKey}
         verification:
             method: POST
             endpoint: /boards/list
@@ -423,7 +423,6 @@ certn:
         - legal
     auth_mode: API_KEY
     proxy:
-        alias: certn
         base_url: https://api.certn.co
         headers:
             Authorization: Bearer ${apiKey}
@@ -534,7 +533,6 @@ close:
         - offline_access
     proxy:
         base_url: https://api.close.com/api
-        docs: https://developer.close.com/
     docs: https://docs.nango.dev/integrations/all/close
 coda:
     categories:
@@ -621,7 +619,7 @@ datev:
     authorization_url: https://login.datev.de/openid/authorize
     token_url: https://api.datev.de/token
     token_request_auth_method: basic
-    scope_seprator: ' '
+    scope_separator: ' '
     default_scopes:
         - openid
     authorization_params:
@@ -2163,7 +2161,7 @@ productboard:
     auth_mode: OAUTH2
     authorization_url: https://app.productboard.com/oauth2/authorize
     token_url: https://app.productboard.com/oauth2/token
-    scope_seprator: ' '
+    scope_separator: ' '
     authorization_params:
         response_type: code
     token_params:
@@ -2341,7 +2339,7 @@ servicem8:
     token_url: https://go.servicem8.com/oauth/access_token
     proxy:
         base_url: https://api.servicem8.com
-    scope_seprator: ' '
+    scope_separator: ' '
     authorization_params:
         response_type: code
     token_params:
@@ -2366,6 +2364,7 @@ signnow:
     docs: https://docs.nango.dev/integrations/all/signnow
 signnow-sandbox:
     categories:
+        - legal
     auth_mode: OAUTH2
     authorization_url: https://app-eval.signnow.com/authorize
     token_url: https://api-eval.signnow.com/oauth2/token
@@ -2878,7 +2877,7 @@ twinfield:
         nonce: AnotherRandomStringTwinfield
     refresh_params:
         grant_type: refresh_token
-    scope_seprator: ' '
+    scope_separator: ' '
     default_scopes:
         - openid
         - twf.user
@@ -2943,7 +2942,7 @@ vimeo:
     authorization_url: https://api.vimeo.com/oauth/authorize
     token_url: https://api.vimeo.com/oauth/access_token
     token_request_auth_method: basic
-    scope_seprator: ' '
+    scope_separator: ' '
     authorization_params:
         response_type: code
     token_params:
