--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1713,6 +1713,8 @@ microsoft-teams:
         - productivity
         - video
     alias: microsoft
+    webhook_routing_script: microsoftTeamsWebhookRouting
+    post_connection_script: microsoftTeamsPostConnection
     docs: https://docs.nango.dev/integrations/all/microsoft-teams
 microsoft-tenant-specific:
     categories:
